# Webots-Middle-Size-League

./: README.md
controllers/barelang_ws/: CMakeLists.txt  barelang_ws  run_sim.py  run_strategi_all.py
controllers/barelang_ws/config/: run_program.yaml  strategi_cmd.yaml
controllers/barelang_ws/include/: DriverRobot.hpp  Kinematic.hpp  NodeState.hpp
controllers/barelang_ws/src/: NodeState.cpp  main.cpp
protos/: Cell.proto  MyProto.proto  ThreeWheels.proto
worlds/: .omni_wheels.wbproj  .omni_wheels_keeper.wbproj  .omni_wheels_supervisor.wbproj  .omni_wheels_test_rtdb_single.wbproj  omni_wheels.wbt  omni_wheels_keeper.wbt  omni_wheels_supervisor.wbt  omni_wheels_test_rtdb_single.wbt
